--- a/src/css/components/botones.css
+++ b/src/css/components/botones.css
@@ -6,14 +6,22 @@
     color: black;
     border: none;
     border-radius: 10px;
-    background: rgba(255, 18, 1, 0.3);
+    background: rgba(255, 18, 1, 0.2);
     overflow: hidden;
     cursor: pointer;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
   }
   
   .boton-1:hover {
       transition: 1s;
-      background: rgba(255, 18, 1, 0.5);
+      background: rgba(255, 18, 1, 0.4);
+  }
+
+  .boton-1:active {
+    transition: 0.2s;
+    transform:translateY(2px);
+    box-shadow: none;
+    
   }
 
   .boton-modificar{
